--- a/jjong.kim.hanme_eng.html
+++ b/jjong.kim.hanme_eng.html
@@ -12,8 +12,8 @@
     </style>
 </head>
 <body>
-    <h1>화면회전 제어 - 자동회전 개인정보 처리방침</h1>
-    <p><strong>화면회전 제어 - 자동회전</strong>(이하 "앱")은 관련 법령을 준수하며 이용자 권익 보호에 최선을 다하고 있습니다.</p>
+    <h1>Typing Master 개인정보 처리방침</h1>
+    <p><strong>Typing Master</strong>(이하 "앱")은 관련 법령을 준수하며 이용자 권익 보호에 최선을 다하고 있습니다.</p>
     
     <h2>1. 수집하는 개인정보의 항목 및 수집방법</h2>
     <h3>가. 수집하는 개인정보의 항목</h3>
